# lockedin

./: .env.example  .gitignore  CONTRACT_DOCUMENTATION.md  Cargo.toml  LOCKEDIN_SPEC.md  README.md  SCAFFOLD_PATTERNS.md  SECURITY_PATTERNS.md  environments.toml  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/config/: database.ts
apps/api/src/middleware/: auth.ts  error.ts
apps/api/src/routes/: analytics.ts  auth.ts  health.ts  profile.ts  template.ts
apps/api/src/services/: analytics.ts  auth.ts  profile.ts  template.ts
apps/api/src/tests/: test-all-endpoints.sh  test-auth.js
apps/api/src/types/: auth.ts
apps/api/src/utils/: jwt.ts  stellar.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
contracts/lockedin/: Cargo.toml
contracts/lockedin/src/: error.rs  events.rs  lib.rs  test.rs  types.rs
contracts/usdc/: Cargo.toml
contracts/usdc/src/: lib.rs
keeper/: .env.example  package-lock.json
keeper/src/: index.ts
libs/types/: bill.ts  cycle.ts  index.ts  package.json  user.ts
libs/utils/: constants.ts  format.ts  index.ts  package.json  validation.ts
lockedin/: README.md  environments.toml  index.html  package-lock.json
lockedin/keeper/: .env.example  README.md  package.json
lockedin/keeper/src/: index.js  index.ts  payment.js  payment.ts
lockedin/src/: App.tsx
lockedin/src/pages/: Dashboard.tsx
lockedin/src/util/: wallet.ts
scripts/: post-build.js
(+15 files in other folders)
